<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="crimeDetailViewModel"
            type="com.example.criminalintent.viewmodel.CrimeDetailViewModel" />
        <variable
            name="crimeDetailFragment"
            type="com.example.criminalintent.view.fragment.CrimeDetailFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".view.fragment.CrimeDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/crime_picture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_person" />

                <ImageButton
                    android:id="@+id/capture_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera"
                    android:onClick="@{() -> crimeDetailViewModel.onClickCaptureImage(crimeDetailFragment)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crime_title_label" />

                <EditText
                    android:id="@+id/crime_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{crimeDetailViewModel.crimeSubject.title}"
                    android:onTextChanged="@{crimeDetailViewModel::onTextChangedCrimeTitle}"
                    android:hint="@string/crime_title_hint" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_details_label" />

        <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{crimeDetailViewModel.crimeSubject.date.toString()}"
            android:onClick="@{()->crimeDetailViewModel.onClickCrimeDate(crimeDetailFragment)}" />

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_solved_label"
            android:checked="@{crimeDetailViewModel.crimeSubject.solved}"
            android:onCheckedChanged="@{crimeDetailViewModel::onCheckedChangedSolved}"/>

        <Button
            android:id="@+id/choose_suspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{crimeDetailViewModel.crimeSubject.suspect == null ? @string/choose_suspect : crimeDetailViewModel.crimeSubject.suspect}"
            android:onClick="@{()->crimeDetailViewModel.onClickChooseSuspect(crimeDetailFragment)}"/>

        <Button
            android:id="@+id/share_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_crime_report"
            android:onClick="@{()->crimeDetailViewModel.onClickShareReport(crimeDetailFragment)}"/>

    </LinearLayout>
</layout>